--- a/aldopoto.html
+++ b/aldopoto.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<a href="aldodata.html"><img src="aldopoto.jpg" width="250" height="250"></a>
+<a href="aldodata.html"><img src="aldopoto.JPG" width="250" height="250"></a>
 
 </body>
 </html>
