--- a/galery poto.html
+++ b/galery poto.html
@@ -6,11 +6,11 @@
 <marquee>
 <img src="balon2.jpeg" width=300 hight=300>
 <img src="ibnupoto.jpg" width=220 hight=300>
-<img src="sulthanfoto.jpg" width=220 hight=300>
-<img src="Yanuar.jpg" width=200 hight=300>
-<img src="Albertfoto.jpg" width=220 hight=300>
+<img src="Sulthanfoto.jpg" width=220 hight=300>
+<img src="yanuar.jpg" width=200 hight=300>
+<img src="albertfoto.jpg" width=220 hight=300>
 <img src="andrianpoto.jpeg" width=220 hight=300>
-<img src="Aldopoto.jpg" width=220 hight=300>
+<img src="aldopoto.jpg" width=220 hight=300>
 </marquee>
 </body>
 </html>
