--- a/galery poto.html
+++ b/galery poto.html
@@ -8,7 +8,7 @@
 <img src="ibnupoto.jpg" width=220 hight=300>
 <img src="Sulthanfoto.jpg" width=220 hight=300>
 <img src="yanuar.jpg" width=200 hight=300>
-<img src="albertfoto.jpg" width=220 hight=300>
+<img src="Albertfoto.jpg" width=220 hight=300>
 <img src="andrianpoto.jpeg" width=220 hight=300>
 <img src="aldopoto.jpg" width=220 hight=300>
 </marquee>
