--- a/ibnudata.html
+++ b/ibnudata.html
@@ -11,7 +11,7 @@
 	<li>N P M	         : 10222855</li>
 	<li>Alamat Email    : <a href="mailto:ibnulejakarta@gmail.com">
 				  ibnulejakarta@gmail.com</a></li>
-	<li>Hobby           : <a href="y2mate.com - ACDC  Back In Black Official Video.MP3" 
+	<li>Hobby           : <a href="y2mate.com - ACDC  Back In Black Official Video.mp3" 
 target="kanan">Dengerin Musik</a></li>
 	<img src="ibnu.gif">
 	<li>ciri-ciri :</li>
