--- a/html/ibnudata.html
+++ b/html/ibnudata.html
@@ -11,7 +11,7 @@
 	<li>N P M	         : 10222855</li>
 	<li>Alamat Email    : <a href="mailto:ibnulejakarta@gmail.com">
 				  ibnulejakarta@gmail.com</a></li>
-	<li>Hobby           : <a href="ACDC Back In Black.mp3"
+	<li>Hobby           : <a href="Dawin - Dessert.mp3"
 target="kanan">Dengerin Musik</a></li>
 	<img src="ibnu.gif">
 	<li>ciri-ciri :</li>
